[gd_scene load_steps=6 format=3 uid="uid://brvly23kxkjhu"]

[ext_resource type="Script" path="res://scripts/intro_crawl.gd" id="1_d2j3e"]
[ext_resource type="PackedScene" uid="uid://ypxn1te6of48" path="res://levels/start.tscn" id="2_vymhg"]
[ext_resource type="Script" path="res://ui/text box/text_box.gd" id="3_b7kwo"]
[ext_resource type="FontFile" uid="uid://deige1vwgfcp2" path="res://ui/text box/Daydream.ttf" id="4_krb5u"]
[ext_resource type="Script" path="res://scripts/flasher.gd" id="5_7mxqf"]

[node name="Outro" type="Node2D" node_paths=PackedStringArray("button")]
script = ExtResource("1_d2j3e")
text = "Your name: Lizzy Silvertongue
Your situation: Slightly Sunny

good pirate!

Thanks for playing <3"
scene = ExtResource("2_vymhg")
button = NodePath("SpaceBar")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -65.0
offset_top = -43.0
offset_right = 1344.0
offset_bottom = 1173.0
color = Color(0, 0, 0, 1)

[node name="TextBox" type="MarginContainer" parent="." node_paths=PackedStringArray("label")]
clip_contents = true
offset_left = 492.0
offset_top = 426.0
offset_right = 571.0
offset_bottom = 453.0
script = ExtResource("3_b7kwo")
label = NodePath("Label")
max_width = 800

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("4_krb5u")
theme_override_font_sizes/font_size = 20

[node name="LetterDisplayTimer" type="Timer" parent="TextBox"]
one_shot = true

[node name="SpaceBar" type="Node2D" parent="." node_paths=PackedStringArray("f1", "f2")]
position = Vector2(1001, 811)
script = ExtResource("5_7mxqf")
f1 = NodePath("ColorRect2")
f2 = NodePath("ColorRect3")

[node name="ColorRect2" type="ColorRect" parent="SpaceBar"]
offset_right = 149.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="SpaceBar"]
offset_right = 149.0
offset_bottom = 40.0
color = Color(0.414066, 0.414066, 0.414066, 1)

[connection signal="finished_displaying" from="TextBox" to="." method="_on_text_box_finished_displaying"]
[connection signal="timeout" from="TextBox/LetterDisplayTimer" to="TextBox" method="_on_letter_display_timer_timeout"]
